# AgriNova

./: Documentation.txt  EXTERNAL_EXAMINER_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  agrinova.txt  diagram.txt  enimto.txt  meeeeeeeeeeeeeeeeeee.txt  run_backend.sh  run_flutter.sh  start_backend.bat
agri_flutter/: BACKEND_FIX.txt  BEGINNER_GUIDE.md  PROJECT_COMPLETE.md  README.md  SETUP.md  pubspec.yaml
agri_flutter/lib/: main.dart
agri_python/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  Documentation.txt  MYSQL_SETUP.md  PROJECT_COMPLETE.md  PROJECT_FILES.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SWAGGER_GUIDE.md  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  test_api.py
agri_python/agrinova_backend/: asgi.py  settings.py  urls.py  wsgi.py
agri_python/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
agri_python/authentication/management/commands/: seed_admin.py
agri_python/authentication/migrations/: 0001_initial.py
agri_python/crop_recommendation/: admin.py  models.py  recommendation_engine.py  serializers.py  urls.py  views.py
agri_python/crop_recommendation/management/commands/: seed_crops.py
agri_python/crop_recommendation/migrations/: 0001_initial.py  0002_alter_soildata_season.py  0003_soildata_humidity_soildata_temperature.py
agri_python/market_finder/: admin.py  apps.py  market_utils.py  models.py  serializers.py  urls.py  views.py
agri_python/market_finder/management/commands/: seed_markets.py
agri_python/market_finder/migrations/: 0001_initial.py
(+58 files in other folders)
