[project]
name = "agri-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.27",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.11",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
]
